# pico-plc

./: .gitignore
hardware/: #auto_saved_files#  aio.kicad_sch  io.kicad_sch  mcu.kicad_sch  power.kicad_sch  rp2350_automation_board.kicad_pcb  rp2350_automation_board.kicad_pro  rp2350_automation_board.kicad_sch  rs485.kicad_sch  ~rp2350_automation_board.kicad_pcb.lck  ~rp2350_automation_board.kicad_sch.lck
hardware/jlcpcb/: project.db
hardware/production/: netlist.ipc
software/: .gitignore  BACKGROUND_USAGE.md  CMakeLists.txt  Dockerfile  TEST_SETUP.md  main.cpp  pico_sdk_import.cmake
software/lib/: CMakeLists.txt
software/lib/dac7562-driver/: CMakeLists.txt  dac7562.cpp  dac7562.h
software/lib/pico-modbus/: CMakeLists.txt  md_master.cpp  md_master.h  md_slave.cpp  md_slave.h
software/lib/pico-modbus/common/: md_base.cpp  md_base.h  md_common.cpp  md_common.h  md_stream.cpp  md_stream.h
software/lib/pico-modbus/master/: master.h
software/lib/pico-modbus/slave/: slave.h
software/lib/pico-utils/: CMakeLists.txt  analog_utils.h  common_utils.cpp  common_utils.h  custom_dac.cpp  custom_dac.h
software/src/: defines.h  main.cpp  master.cpp  slave.cpp
software/src/tests/: relay_master.cpp  relay_slave.cpp
